docs: adding api docs(unit)
